# review-loop

./: LICENSE  README.md  pyproject.toml
configs/: outline_review.yaml
docs/: DESIGN.md  PLAN.md  SPEC.md
review_loop/: __init__.py  __main__.py  audit.py  config.py  context.py  engine.py  file_protocol.py  main.py  models.py  persistence.py  registry.py  tools.py
tests/: test_audit.py  test_config.py  test_context.py  test_engine.py  test_file_protocol.py  test_main.py  test_models.py  test_persistence.py  test_registry.py  test_resume.py  test_skills.py  test_usage_summary.py
tests/fixtures/test_skill/: SKILL.md
